--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="src/css/style.css">
 </head>
 <body>
-    <section class="card">
-        <button id="readNfc" class="btn">Read Card</button>
+    <section class="card" id="card">
     </section>
     <script src="src/index.js"></script>
 </body>
